Account and entitlement activation working.
